# book-maksym

./: .gitignore  readme.md  todo-backend.md
api/: Cargo.toml
api/src/: auth.rs  cors.rs  data.rs  htmx.rs  main.rs  state.rs
api/templates/: base.html.tera  events.html.tera  index.html.tera  login.html.tera  nav.html.tera
api/templates/components/: event.html.tera
ui/: package-lock.json  package.json
ui/.react-router/types/: +register.ts
ui/.react-router/types/app/routes/+types/: items.ts
ui/app/: routes.ts
ui/app/items/: page.tsx
ui/app/routes/: home.tsx  items.tsx
ui/pages/: _app.tsx  _document.tsx  about.tsx  login.tsx  logout.tsx
ui/pages/events/: index.tsx
ui/pages/profile/: index.tsx
