[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_okapi = { version = "0.9.0", features = ["swagger"]}
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"]}
sqlx-sqlite = "0.8.3"
tokio = { version = "1.20.0", features = ["macros"]}

# [dependencies.rocket_auth]
# version = "0.4.0"
# features = ["sqlx-sqlite"]