[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5", features = ["secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_okapi = { version = "0.9.0", features = ["swagger"]}
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"]}
sqlx-sqlite = "0.8.3"
tokio = { version = "1.20.0", features = ["macros"]}
argon2 = "*"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]